# Recession-Indicators-Risk-Model

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
config/: README.md
docs/: data_dictionary.md  methodology.md  models.md
entrypoint/: compare_models.py  engineer_features.py  fetch_nber.py  preprocess.py  train.py  visualize_model_comparison.py  visualize_test_predictions.py
notebooks/: README.md
reports/: model_comparison_detailed.json  report.md  reports.md
src/features/: __init__.py  engineer.py  features.md  selector.py  targets.py
src/utils/: config.py  logger.py
src/visualization/: __init__.py  static_plots.py
tests/: test_config.py
