[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recession-indicators-model"
version = "0.1.0"
description = "ML model for analyzing US recession indicators"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

# Core dependencies (production)
dependencies = [
    # Data manipulation and analysis
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",

    # Machine Learning - Traditional
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",

    # Time Series Modeling
    "pmdarima>=2.0.0",
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",

    # Deep Learning
    "torch>=2.0.0",

    # Hyperparameter Optimization
    "optuna>=3.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "kaleido>=0.2.0",

    # Data Fetching
    "fredapi>=0.5.0",

    # MLOps
    "mlflow>=2.9.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.27.0",
    "ipywidgets>=8.1.0",
    "kaggle>=1.5.0",
]

# Black formatter configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# mypy type checker configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
